Add lint tox testenv and fix problems found

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
-envlist=py35
+envlist=py35,lint
 
 [testenv]
 deps=-rtest-requirements.txt
 commands=py.test
+
+[testenv:lint]
+commands=
+    flake8 trello_cli
+    flake8 tests
